--- a/facapedidos/application/configs/application.ini
+++ b/facapedidos/application/configs/application.ini
@@ -14,7 +14,7 @@ resources.modules[] = ""
 resources.frontController.env = "APPLICATION_ENV"
 resources.frontController.params.prefixDefaultModule = 1  #Exige prefixo
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules" 
-resources.frontController.defaultModule = "portal"
+resources.frontController.defaultModule = "estabelecimento"
 resources.frontController.baseUrl = "/"
 resources.frontController.params.displayExceptions = 1
 
