Removido simbolo de comentario deprecated # e substituido por ;

--- a/whattoeat/application/configs/application.ini
+++ b/whattoeat/application/configs/application.ini
@@ -1,30 +1,30 @@
 [production]
-# Debug output
+; Debug output
 phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
 
-# PHP Date Settings
-#phpSettings.date.timezone = "UTC"
+; PHP Date Settings
+;phpSettings.date.timezone = "UTC"
 
-# Include path
+; Include path
 includePaths.library = APPLICATION_PATH "/../library"
 includePaths.library = APPLICATION_PATH "/models"
 
-# Autoloader Namespaces
+; Autoloader Namespaces
 
-#Automatically load classes that start with My_ from our lib directory
-#autoloaderNamespaces[] = "My_"
+;Automatically load classes that start with My_ from our lib directory
+;autoloaderNamespaces[] = "My_"
 
 
-#Bootstrap
+;Bootstrap
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 
 
-# Front Controller
-#resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers" nao pode ser isso porque tem modulos
+; Front Controller
+;resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers" nao pode ser isso porque tem modulos
 
-# Front Controller Params
+; Front Controller Params
 appnamespace = ""
 resources.modules[] = "" 
 resources.frontController.env = "APPLICATION_ENV"
@@ -33,18 +33,18 @@ resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 resources.frontController.defaultModule = "estabelecimento"
 resources.frontController.baseUrl = "/"
 resources.frontController.params.displayExceptions = 1
-#resources.frontController.params.cdnEnabled = "true"
-#resources.frontController.params.cdnHost = "http://static.site.com"
+;resources.frontController.params.cdnEnabled = "true"
+;resources.frontController.params.cdnHost = "http://static.site.com"
 
 
-#Views
+;Views
 resources.view.encondig = "UTF-8"
-#resources.view.basePath = APPLICATION_PATH "/modules/portal/views/scripts" acho q nao faz sentido apontar para a view de um modulo em particular
+;resources.view.basePath = APPLICATION_PATH "/modules/portal/views/scripts" acho q nao faz sentido apontar para a view de um modulo em particular
 
-#Layout
+;Layout
 resources.layout.layoutPath = APPLICATION_PATH "/layouts"
 
-#Database
+;Database
 resources.db.adapter = "pdo_pgsql"
 ;resources.db.params.host = 189.38.95.105
 ;resources.db.params.username = facapedidos
@@ -52,19 +52,19 @@ resources.db.adapter = "pdo_pgsql"
 ;resources.db.params.dbname = facapedidos
 resources.db.params.host = localhost
 resources.db.params.username = postgres
-resources.db.params.password = dataprev
-resources.db.params.dbname = facapedido_04_08_2011
+resources.db.params.password = postgres
+resources.db.params.dbname = whattoeat
 resources.db.isDefaultTableAdapter = true
 
 
-#Session
-#resources.session.save_path = APPLICATION_PATH "/data/sessions"
-#sessao expira em 4 horas
+;Session
+;resources.session.save_path = APPLICATION_PATH "/data/sessions"
+;sessao expira em 4 horas
 resources.session.gc_maxlifetime = 18000
 resources.session.remember_me_seconds = 18000
 
-# Navigation
-#Automatically store our navigation in the registry with key Zend_Navigation
+; Navigation
+;Automatically store our navigation in the registry with key Zend_Navigation
 resources.navigation.storage.registry.key = "Zend_Navigation"
 resources.navigation.pages.welcome.label = "Welcome"
 resources.navigation.pages.welcome.uri = "/"
@@ -72,17 +72,17 @@ resources.navigation.pages.welcome.uri = "/"
 
 [development : production]
 
-# Debug output
+; Debug output
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 
-# Front Controller Params
+; Front Controller Params
 resources.frontController.params.cdnEnabled = "false"
 resources.frontController.params.displayExceptions = 1
 
 
-# Database
-#resources.db.params.dbname = "dbname"
+; Database
+;resources.db.params.dbname = "dbname"
 
 
 
