--- a/whattoeat/application/configs/application.ini
+++ b/whattoeat/application/configs/application.ini
@@ -30,7 +30,7 @@ resources.modules[] = ""
 resources.frontController.env = "APPLICATION_ENV"
 resources.frontController.params.prefixDefaultModule = 1  #Exige prefixo
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules" 
-resources.frontController.defaultModule = "estabelecimento"
+resources.frontController.defaultModule = "portal"
 resources.frontController.baseUrl = "/"
 resources.frontController.params.displayExceptions = 1
 ;resources.frontController.params.cdnEnabled = "true"
