--- a/whattoeat/application/configs/application.ini
+++ b/whattoeat/application/configs/application.ini
@@ -53,7 +53,7 @@ resources.db.adapter = "pdo_pgsql"
 resources.db.params.host = localhost
 resources.db.params.username = postgres
 resources.db.params.password = postgres
-resources.db.params.dbname = whattoeat
+resources.db.params.dbname = test
 resources.db.isDefaultTableAdapter = true
 
 
